# viking-bio-pwa

./: .editorconfig  .gitignore  .goreleaser.yml  CMakeLists.txt  README.md  pico_sdk_import.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-firmware.yml  build-proxy.yml  pages.yml  release.yml
cmake/: gen_demo_page.py  gen_web_content.py
docs/: architecture.md
include/: flame_counter.h  http_server.h  lfs_hal.h  ntp.h  push_manager.h  serial_handler.h  wifi_config.h
pico-bridge/: .clang-format  CMakeLists.txt  CMakePresets.json  pico_sdk_import.cmake
pico-bridge/cmake/: gen_demo_page.py
pico-bridge/include/: dns_sd_browser.h  http_client.h  lfs_hal.h  push_manager.h  reg_listener.h  tcp_client.h  version.h  viking_bio_protocol.h  wifi_config.h
pico-bridge/platform/: lwipopts.h  mbedtls_config.h  mbedtls_time.c
pico-bridge/src/: dns_sd_browser.c  http_client.c  lfs_hal.c  main.c  push_manager.c  reg_listener.c  serial_handler.c  tcp_client.c  viking_bio_protocol.c  wifi_config.c
platform/: fsdata_custom.c  lwipopts.h  mbedtls_config.h
proxy/: .env.example  .gitignore  .golangci.yml  Makefile  README.md  assets.go  go.mod  go.sum  package-lock.json  package.json
proxy/cmd/proxy/: main.go
proxy/internal/cert/: manager.go
proxy/internal/config/: config.go  config_test.go
proxy/internal/configure/: gui.go  gui_stub.go  tui.go
proxy/internal/ddns/: client.go  client_test.go
proxy/internal/elspot/: elspot.go  elspot_test.go
proxy/internal/ingest/: codec.go  codec_test.go
proxy/internal/mdns/: advertiser.go
proxy/internal/push/: manager.go  manager_internal_test.go  manager_test.go
proxy/internal/serial/: bridge.go
proxy/internal/server/: handlers.go  handlers_internal_test.go  handlers_test.go  ingest.go  ingest_test.go  notifications.go  server.go  server_test.go  telemetry_state.go
proxy/internal/storage/: devices.go  files.go  subscriptions.go  subscriptions_test.go
proxy/internal/uptime/: store.go  store_test.go
proxy/internal/vapid/: vapid.go  vapid_test.go
proxy/public/: app.js  index.html  manifest.json  style.css  sw.js  uptime-client.js
proxy/public/examples/: error-integration.html
proxy/public/scripts/: continuousBlink.js
proxy/public/styles/: blink-error.css
proxy/scripts/: configure-device.js  dns-sd-browser.js
proxy/src/: announcer.js  cert-manager.js  ddns-client.js  mdns-advertiser.js  push-manager.js  scheduler.js  serial-bridge.js  server.js  tcp-receiver.js  utils.js  webhook-receiver.js
src/: flame_counter.c  http_server.c  lfs_hal.c  main.c  ntp.c  push_manager.c  version.c  wifi_config.c
src/web/: app.js  index.html  manifest.json  style.css  sw.js
